# co2-panel-ui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/co2_panel_c_api/: Cargo.toml
crates/co2_panel_c_api/src/: lib.rs
crates/co2_panel_protocol/: Cargo.toml
crates/co2_panel_protocol/src/: lib.rs
crates/co2_panel_ui/: Cargo.toml
crates/co2_panel_ui/src/: main.rs
deploy/: co2-panel.desktop.template
docs/: API.md
examples/c/: Makefile  main.c
include/: co2_panel.h
scripts/: install-on-raspberry-pi.sh  package-release.sh
